# boltffi

./: BOLTFFI_TOML_SPEC.md  Cargo.toml  README.md  cbindgen.toml  justfile
.github/workflows/: ci.yml  release.yml
benchmarks/: .gitignore
benchmarks/rust-boltffi/: boltffi.toml
benchmarks/rust-boltffi/src/: lib.rs
boltffi/src/: lib.rs
boltffi_bindgen/src/render/: mod.rs
boltffi_cli/: Cargo.toml
boltffi_cli/src/: build.rs  check.rs  config.rs  main.rs  reporter.rs  target.rs
boltffi_cli/src/commands/: build.rs  generate.rs  pack.rs
boltffi_cli/src/pack/: android.rs  xcframework.rs
boltffi_core/src/: lib.rs  rustfuture.rs
boltffi_macros/src/: class.rs  export.rs
boltffi_tests/src/: lib.rs
boltffi_tests/tests/: class_ffi.rs
docs/src/: content.config.ts
examples/: .gitignore
examples/demo/: .gitignore  Cargo.toml  boltffi.toml
examples/wasm-demo/: Cargo.toml  package-lock.json  package.json  test.mjs  tsconfig.json
mobiFFI_bindgen/src/: lib.rs
mobiFFI_build/src/: lib.rs
mobiFFI_cli/src/: config.rs  error.rs  main.rs
mobiFFI_core/: build.rs
mobiFFI_core/src/: lib.rs
mobiFFI_core/templates/: atomics.h
mobiFFI_macros/src/: lib.rs
riff/src/: lib.rs
riff_bindgen/: askama.toml
riff_bindgen/src/: lib.rs
riff_cli/src/: config.rs
riff_core/src/: callback.rs  lib.rs
riff_core/tests/: wire_records.rs
riff_macros/src/: callback_registry.rs  callback_trait.rs  class.rs  export.rs  lib.rs  params.rs  returns.rs  util.rs
swift_test/: Generated.json  Generated.swift  mobiFFI_core.h  test.swift  test_ffi
(+156 files in other folders)
