[workspace]
resolver = "3"
members = ["boltffi", "boltffi_core", "boltffi_macros", "boltffi_bindgen", "boltffi_cli", "boltffi_ffi_rules", "boltffi_verify", "boltffi_tests"]
exclude = ["benchmarks/rust-boltffi", "benchmarks/rust-uniffi", "examples/wasm-demo"]

[workspace.package]
license = "MIT"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
not_unsafe_ptr_arg_deref = "allow"
missing_safety_doc = "allow"
